@@ -54,7 +54,7 @@ public class ConvexHullTest extends BaseBulletTest {
 
 	public static btConvexHullShape createConvexHullShape (final Model model, boolean optimize) {
 		final Mesh mesh = model.meshes.get(0);
-		final btConvexHullShape shape = new btConvexHullShape(mesh.getVerticesBuffer(), mesh.getNumVertices(),
+		final btConvexHullShape shape = new btConvexHullShape(mesh.getVerticesBuffer(false), mesh.getNumVertices(),
 			mesh.getVertexSize());
 		if (!optimize) return shape;
 		// now optimize the shape
