@@ -98,12 +98,12 @@ public class SoftBodyTest extends BaseBulletTest {
 			new VertexAttribute(Usage.Normal, 3, ShaderProgram.NORMAL_ATTRIBUTE),
 			new VertexAttribute(Usage.TextureCoordinates, 2, ShaderProgram.TEXCOORD_ATTRIBUTE + "0"));
 		final int vertSize = mesh.getVertexSize() / 4;
-		((Buffer)mesh.getVerticesBuffer()).position(0);
-		((Buffer)mesh.getVerticesBuffer()).limit(vertCount * vertSize);
-		((Buffer)mesh.getIndicesBuffer()).position(0);
-		((Buffer)mesh.getIndicesBuffer()).limit(faceCount * 3);
-		softBody.getVertices(mesh.getVerticesBuffer(), vertCount, mesh.getVertexSize(), 0);
-		softBody.getIndices(mesh.getIndicesBuffer(), faceCount);
+		((Buffer) mesh.getVerticesBuffer(true)).position(0);
+		((Buffer) mesh.getVerticesBuffer(true)).limit(vertCount * vertSize);
+		((Buffer) mesh.getIndicesBuffer(true)).position(0);
+		((Buffer) mesh.getIndicesBuffer(true)).limit(faceCount * 3);
+		softBody.getVertices(mesh.getVerticesBuffer(true), vertCount, mesh.getVertexSize(), 0);
+		softBody.getIndices(mesh.getIndicesBuffer(true), faceCount);
 
 		final float[] verts = new float[vertCount * vertSize];
 		final int uvOffset = mesh.getVertexAttribute(Usage.TextureCoordinates).offset / 4;
@@ -150,7 +150,7 @@ public class SoftBodyTest extends BaseBulletTest {
 
 	@Override
 	protected void renderWorld () {
-		softBody.getVertices(mesh.getVerticesBuffer(), softBody.getNodeCount(), mesh.getVertexSize(), 0);
+		softBody.getVertices(mesh.getVerticesBuffer(true), softBody.getNodeCount(), mesh.getVertexSize(), 0);
 		softBody.getWorldTransform(instance.transform);
 		super.renderWorld();
 
