@@ -82,8 +82,8 @@ public class SoftMeshTest extends BaseBulletTest {
 		positionOffset = meshPart.mesh.getVertexAttribute(Usage.Position).offset;
 		normalOffset = meshPart.mesh.getVertexAttribute(Usage.Normal).offset;
 
-		softBody = new btSoftBody(worldInfo, meshPart.mesh.getVerticesBuffer(), meshPart.mesh.getVertexSize(), positionOffset,
-			normalOffset, meshPart.mesh.getIndicesBuffer(), meshPart.offset, meshPart.size, indexMap, 0);
+		softBody = new btSoftBody(worldInfo, meshPart.mesh.getVerticesBuffer(false), meshPart.mesh.getVertexSize(), positionOffset,
+			normalOffset, meshPart.mesh.getIndicesBuffer(false), meshPart.offset, meshPart.size, indexMap, 0);
 		// Set mass of the first vertex to zero so its unmovable, comment out this line to make it a fully dynamic body.
 		softBody.setMass(0, 0);
 		com.badlogic.gdx.physics.bullet.softbody.btSoftBody.Material pm = softBody.appendMaterial();
@@ -120,8 +120,8 @@ public class SoftMeshTest extends BaseBulletTest {
 	public void render () {
 		if (world.renderMeshes) {
 			MeshPart meshPart = model.nodes.get(0).parts.get(0).meshPart;
-			softBody.getVertices(meshPart.mesh.getVerticesBuffer(), meshPart.mesh.getVertexSize(), positionOffset, normalOffset,
-				meshPart.mesh.getIndicesBuffer(), meshPart.offset, meshPart.size, indexMap, 0);
+			softBody.getVertices(meshPart.mesh.getVerticesBuffer(true), meshPart.mesh.getVertexSize(), positionOffset, normalOffset,
+				meshPart.mesh.getIndicesBuffer(false), meshPart.offset, meshPart.size, indexMap, 0);
 			softBody.getWorldTransform(entity.transform);
 		}
 		super.render();
