@@ -9,6 +9,7 @@
 - [BREAKING CHANGE] WidgetGroup#hit first validates the layout.
 - [BREAKING CHANGE] Cell getters return object wrapper instead of primitives.
 - [BREAKING CHANGE] MeshPartBuilder#lastIndex now returns int instead of short.
+- [BREAKING CHANGE] Mesh#getVerticesBuffer, Mesh#getIndicesBuffer, VertexData#getBuffer, and IndexData#getBuffer are deprecated in favor to new methods with boolean parameter. If you subclassed some of these classes, you need to implement the new methods.
 - iOS: Add new MobiVM MetalANGLE backend
 - API Addition: Added Haptics API with 4 different Input#vibrate() methods with complete Android and iOS implementations.
 - Fix: Fixed Android and iOS touch cancelled related issues, see #6871.
